<resources>
    <string name="app_name">COV-X</string>
    <string name="cov_x">COV-X</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="impor_dari_galeri">Impor dari Galeri</string>
    <string name="foto_paru_1_jpeg">foto_paru_1.jpeg</string>
    <string name="_19_mei_2021_13_00_am">19 Mei 2021 - 13.00 AM</string>
    <string name="lihat">Lihat</string>
    <string name="belum_ada_riwayat">Belum ada riwayat...</string>
    <string name="menunggu_hasil_prediksi">Menunggu hasil prediksi...</string>
    <string name="batal">Batal</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="tanggal">Tanggal</string>
    <string name="nama_foto">Nama Foto</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="kirim_foto">Kirim Foto</string>
    <string name="lihat_hasil_prediksi">Lihat Hasil Prediksi</string>
    <string name="prediksi_berhasil">Prediksi Berhasil</string>
    <string name="maks_5_foto">(Maks. 5 foto)</string>
    <string name="loading">Loading...</string>
    <string name="profil">Profil</string>
    <string name="riwayat">Riwayat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dwi_gmail_com">dwi@gmail.com</string>
    <string name="dwi_prasetya_armunanta">Dwi Prasetya Armunanta</string>
    <string name="keluar">Keluar</string>
</resources>