<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home"
        android:enabled="true"
        app:cnb_iconColor="@color/base_red"
        app:cnb_textColor="@color/base_red"
        />

    <item
        android:id="@+id/nav_riwayat"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/riwayat"
        app:cnb_iconColor="@color/base_red"
        app:cnb_textColor="@color/base_red"
        />

    <item
        android:id="@+id/nav_profil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profil"
        app:cnb_iconColor="@color/base_red"
        app:cnb_textColor="@color/base_red"
        />


</menu>