<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/lungs_red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textSize="24sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/base_red"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/editNama"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:layout_marginTop="30dp"
        android:paddingTop="14dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:background="@drawable/custom_edit_text"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/base_red"
        android:textColorHint="@color/base_red"
        />

    <EditText
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:background="@drawable/custom_edit_text"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/base_red"
        android:textColorHint="@color/base_red"
        />

    <EditText
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:background="@drawable/custom_edit_text"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/base_red"
        android:textColorHint="@color/base_red"
        />

    <android.widget.Button
        android:id="@+id/btnDaftar"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/base_white"
        android:textSize="16sp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/lato_bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/base_red"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>