<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="16dp"
        >


        <ImageView
            android:id="@+id/imgProfil"
            android:src="@drawable/profile_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Halo Radiologis,"
            android:fontFamily="@font/lato_light"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/textNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dwi_prasetya_armunanta"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dwi_gmail_com"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:textColor="@color/base_gray"
            />

        <android.widget.Button
            android:id="@+id/btnLogout"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar"
            android:textAllCaps="false"
            android:textColor="@color/base_white"
            android:textSize="16sp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/lato_bold"/>

    </LinearLayout>

</FrameLayout>