<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StateActivity">

    <LinearLayout
        android:id="@+id/waitingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/waiting_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/waiting"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:text="@string/menunggu_hasil_prediksi"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/successLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/success_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/checked"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/prediksi_berhasil"
            />

        <android.widget.Button
            android:id="@+id/btnLihatHasil"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_hasil_prediksi"
            android:textAllCaps="false"
            android:textColor="@color/base_white"
            android:textSize="16sp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/lato_bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/failLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/fail_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fail"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Oopss...\nTerjadi Kesalahan Sistem"
            />

        <android.widget.Button
            android:id="@+id/btnCobaLagi"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coba_lagi"
            android:textAllCaps="false"
            android:textColor="@color/base_white"
            android:textSize="16sp"
            android:background="@drawable/custom_button_lihat"
            android:fontFamily="@font/lato_bold"/>

        <android.widget.Button
            android:id="@+id/btnBatal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:textAllCaps="false"
            android:textColor="@color/base_white"
            android:textSize="16sp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/lato_bold"/>


    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>