<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPrediksiActivity">



    <ImageView
        android:id="@+id/imageParu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/base_gray"
        />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_round_arrow_back_24"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/base_red"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/base_red"
            >
            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Positif Covid"
                android:fontFamily="@font/lato_regular"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:textColor="@color/base_white"
                />

            <TextView
                android:id="@+id/text_persentase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="80%"
                android:textColor="@color/base_white"
                android:fontFamily="@font/lato_bold"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingBottom="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:background="@color/base_white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_foto"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                />

            <TextView
                android:id="@+id/text_NamaFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto_paru_1_jpeg"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/black"
                android:maxLength="20"
                android:ellipsize="marquee"
                android:singleLine="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                />

            <TextView
                android:id="@+id/text_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19_mei_2021_13_00_am"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>