<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >


    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="10dp"
            >

            <TextView
                android:id="@+id/txt_NamaFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/foto_paru_1_jpeg"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLength="15"
                android:ellipsize="marquee"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/textTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:fontFamily="@font/lato_regular"
                android:textSize="12sp"
                android:text="@string/_19_mei_2021_13_00_am"
                android:textColor="@color/base_gray"
                android:maxLength="15"
                android:ellipsize="marquee"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right"
            >

            <android.widget.Button
                android:id="@+id/btnLihat"
                android:layout_height="wrap_content"
                android:layout_width="60dp"
                android:text="@string/lihat"
                android:background="@drawable/custom_button_lihat"
                android:fontFamily="@font/lato_regular"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textColor="@color/base_white"
                />


            <android.widget.Button
                android:layout_marginLeft="10dp"
                android:id="@+id/btnHapus"
                android:layout_height="wrap_content"
                android:layout_width="60dp"
                android:text="Hapus"
                android:fontFamily="@font/lato_regular"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textColor="@color/base_white"
                android:background="@drawable/custom_button_hapus"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>