<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/splitView"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/galeri"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impor_dari_galeri"
                android:fontFamily="@font/lato_regular"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ambil foto X-Ray paru-paru\ndari Galeri Anda"
                android:textAlignment="center"
                android:fontFamily="@font/lato_regular"
                android:textSize="14sp"
                android:textColor="@color/old_blue"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maks_5_foto"
                android:textAlignment="center"
                android:fontFamily="@font/lato_regular"
                android:textSize="14sp"
                android:textColor="@color/old_blue"/>
        </LinearLayout>

        <View
            android:id="@+id/splitView"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_centerVertical="true"
            android:background="@color/base_gray"
            />

        <LinearLayout
            android:id="@+id/botLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/splitView"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/camera"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambil_foto"
                android:fontFamily="@font/lato_regular"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ambil foto X-Ray paru-paru\ndari Kamera Anda"
                android:textAlignment="center"
                android:fontFamily="@font/lato_regular"
                android:textSize="14sp"
                android:textColor="@color/old_blue"/>

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>